--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "1.31.0",
+    "tsparticles": "1.31.0",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
