--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^7.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-tsparticles": "1.31.0",
     "tsparticles": "1.31.0",
